<resources>
    <string name="app_name">avocarbo</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="signup">Sign Up</string>
    <string name="camera">Open Camera</string>
    <string name="depth_use_explanation" translatable="false">When Depth is enabled on supported devices, virtual objects adapt to the environment by blending in with the real world.</string>
    <string name="button_text_enable_depth" translatable="false">Enable</string>
    <string name="button_text_disable_depth" translatable="false">Disable</string>
    <string name="options_title_with_depth" translatable="false">Your device supports depth</string>
    <string name="options_title_without_depth" translatable="false">Your device does not support depth</string>
    <string name="done" translatable="false">Done</string>
    <string-array name="depth_options_array" translatable="false">
        <item>Enable depth</item>
        <item>Show depth map</item>
    </string-array>
    <string name="options_title_instant_placement" translatable="false">Instant Placement options</string>
    <string-array name="instant_placement_options_array" translatable="false">
        <item>Enable Instant Placement</item>
    </string-array>
    <string name="hello_first_fragment">Avocarbo</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="login_page">Log In Page</string>
    <string name="profile">Profile</string>
    <string name="login">Log In</string>
    <string name="login_error">Login failed</string>
    <string name="signup_error">Signup failed</string>
    <string name="recipes">Recipes Here</string>
    <string name="history">History Here</string>
    <string name="home_title">Home</string>
    <string name="camera_title">Camera</string>
    <string name="profile_title">Profile</string>
    <string name="recipes_title">Recipes</string>
    <string name="history_title">History</string>
    <string name="settings">settings</string>
    <string name="settings_title">settings</string>
    <string name="passwordConfirmed">Confirm:</string>
    <string name="next">Next</string>
    <string name="setting_title">What can we help you today?</string>
    <string name="Policy_title">Term,Conditions and Privacy Policy</string>
    <string name="change">Password/Account Change</string>
    <string name="save">Save</string>
    <string name="new_password">New Password:</string>
    <string name="example">Email: (User email will be shown here)</string>
    <string name="other_apps">Management of Connection to Other Apps</string>
    <string name="language">Language</string>
    <string name="notifications">Notifications</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone">Phone:</string>
    <string name="date_of_birth">Date of brith:</string>
    <string name="sex">Sex assigned at birth:</string>
    <string name="first_name_input">Avocarbo</string>
    <string name="email_input">XXXXXXX@XXX.com</string>
    <string name="last_name_input">Foodie</string>
    <string name="phone_input">XXX-XXX-XXXX</string>
    <string name="birth_input">XX-XX-XXXX</string>
    <string name="sex_input">Male</string>
    <string name="health_status">Health status:</string>
    <string name="health_status_input">Type I Diabetes\n patient</string>
    <string name="new_recipes">Create a new recipe?</string>
    <string name="bread">Food Information</string>
    <string name="bread_name">Bread (100g)</string>
    <string name="Carbo">Carbohydate: Xg</string>
    <string name="Privacy">Privacy Policy</string>
    <string name="logout">Log Out</string>
    <string name="Protein">Protein: Xg</string>
    <string name="Fat">Fat: Xg</string>
    <string name="recipe_1">Recipe 1 (Clickable)</string>
    <string name="recipe_2">recipe 2</string>
    <string name="recipe_3">recipe 3</string>
    <string name="current_recipes">Current Recipes</string>
    <string name="morning">Morning</string>
    <string name="noon">Noon</string>
    <string name="evening">Evening</string>
    <string name="morning_food">Milk:200mL, Bread:50g</string>
    <string name="noon_food">Beef:100g, Broccoli:100g</string>
    <string name="evening_food">Cucumber:100g, Chicken Breast:100g</string>
    <string name="summary">The overall carbohydrate will be X g.</string>
    <string name="date1">Yesterday</string>
    <string name="date2">Jan 1st,2023</string>
    <string name="info1">Beef(100g), containing X g of carbohydrate</string>
    <string name="info2">Broccoli(200g), containing X g of carbohydrate</string>
    <string name="home_today">Today\'s Meals</string>
    <string name="home_9am">9:05am</string>
    <string name="home_12pm">12:30pm</string>
    <string name="home_6pm">6:15pm</string>
</resources>