<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:background="@drawable/background_copy">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipe_1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/morning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/morning"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <ImageView
        android:id="@+id/bread"
        android:layout_width="216dp"
        android:layout_height="104dp"
        app:layout_constraintEnd_toEndOf="@id/morning"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/morning"
        app:layout_constraintTop_toBottomOf="@id/morning"
        app:srcCompat="@drawable/bread" />

    <ImageView
        android:id="@+id/milk"
        android:layout_width="216dp"
        android:layout_height="104dp"
        app:layout_constraintEnd_toEndOf="@id/morning"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/morning"
        app:layout_constraintTop_toBottomOf="@id/morning"
        app:srcCompat="@drawable/milk" />

    <TextView
        android:id="@+id/morning_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:text="@string/morning_food"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bread" />









    <TextView
        android:id="@+id/noon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/noon"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/morning_food"
        app:layout_constraintStart_toStartOf="@id/morning_food"
        app:layout_constraintTop_toBottomOf="@id/morning_food" />

    <ImageView
        android:id="@+id/beef"
        android:layout_width="216dp"
        android:layout_height="104dp"
        app:layout_constraintEnd_toEndOf="@id/noon"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/noon"
        app:layout_constraintTop_toBottomOf="@id/noon"
        app:srcCompat="@drawable/beef" />

    <ImageView
        android:id="@+id/broccoli"
        android:layout_width="216dp"
        android:layout_height="104dp"
        app:layout_constraintEnd_toEndOf="@id/noon"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/noon"
        app:layout_constraintTop_toBottomOf="@id/noon"
        app:srcCompat="@drawable/broccoli" />

    <TextView
        android:id="@+id/noon_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:text="@string/noon_food"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/beef" />







    <TextView
        android:id="@+id/evening"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/evening"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/noon_food"
        app:layout_constraintStart_toStartOf="@id/noon_food"
        app:layout_constraintTop_toBottomOf="@id/noon_food" />

    <ImageView
        android:id="@+id/chicken"
        android:layout_width="216dp"
        android:layout_height="104dp"
        app:layout_constraintEnd_toEndOf="@id/evening"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/evening"
        app:layout_constraintTop_toBottomOf="@id/evening"
        app:srcCompat="@drawable/chicken" />

    <ImageView
        android:id="@+id/cucumber"
        android:layout_width="216dp"
        android:layout_height="104dp"
        app:layout_constraintEnd_toEndOf="@id/evening"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/evening"
        app:layout_constraintTop_toBottomOf="@id/evening"
        app:srcCompat="@drawable/cucumber" />

    <TextView
        android:id="@+id/evening_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:text="@string/evening_food"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chicken" />


    <TextView
        android:id="@+id/summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/summary"
        android:textStyle="bold"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/evening_food" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:onClick="Save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>