<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:background="@drawable/background_copy">
    <include
        layout="@layout/appbar_bread" />

    <ImageView
        android:id="@+id/home_bread"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_below="@+id/home_9am"
        android:layout_marginTop="72dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bread" />
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bread_name"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_bread" />
    <TextView
        android:id="@+id/Carbo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Carbo"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name" />
    <TextView
        android:id="@+id/Protein"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Protein"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Carbo" />
    <TextView
        android:id="@+id/Fat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Fat"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Protein" />


</androidx.constraintlayout.widget.ConstraintLayout>